--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
 
-  "homepage": "http://jehucalle.github.io",
+  "homepage": "http://jehucalle.github.io/",
 
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
