--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -r https://github.com/JehuCalle/portafolio-react",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
